UI bug on mobile

--- a/client/src/Components/Navbar/styles/Navbar.module.css
+++ b/client/src/Components/Navbar/styles/Navbar.module.css
@@ -116,6 +116,7 @@
   }
 
   .icons {
+    margin-left: auto;
     padding: 1px;
   }
 }
